<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="br.com.dsqz.chatnoir.poc_ft.activity.AutenticacaoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/autenticacao_edit2_margin_end"
        android:layout_marginStart="@dimen/autenticacao_edit2_margin_start">

        <ImageView
            android:id="@+id/imgLogo1"
            android:layout_width="match_parent"
            android:layout_height="116.8dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/autenticacao_logo1_margin_top"
            android:adjustViewBounds="true"
            android:maxHeight="@dimen/autenticacao_logo1_height"
            android:maxWidth="@dimen/autenticacao_logo1_width"
            android:src="@drawable/splash_logo_teste"/>

        <EditText
            android:id="@+id/autenticacao_editTextUsuario"
            android:layout_width="match_parent"
            android:layout_height="@dimen/autenticacao_etittext_height"
            android:layout_below="@id/imgLogo1"
            android:layout_marginTop="47.7dp"
            android:fontFamily="sans-serif"
            android:hint="@string/autenticacao_edit1_hint"
            android:maxLength="50"
            android:shadowColor="@color/white"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/autenticacao_editTextSenha"
            android:layout_width="match_parent"
            android:layout_height="@dimen/autenticacao_etittext_height"
            android:layout_below="@+id/autenticacao_editTextUsuario"
            android:layout_marginTop="16.2dp"
            android:fontFamily="sans-serif"
            android:hint="@string/autenticacao_edit2_hint"
            android:inputType="textPassword"
            android:maxLength="50"
            android:shadowColor="@color/white"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/buttonEntrar"
            android:layout_width="@dimen/default_button_width"
            android:layout_height="@dimen/default_button_height"
            android:layout_alignStart="@+id/autenticacao_textViewCadastrar"
            android:layout_below="@+id/autenticacao_editTextSenha"
            android:layout_marginEnd="@dimen/autenticacao_button_margin_end"
            android:layout_marginStart="@dimen/autenticacao_button_margin_start"
            android:layout_marginTop="54.4dp"
            android:background="@color/blue"
            android:fontFamily="sans-serif-medium"
            android:maxHeight="@dimen/default_button_height"
            android:maxWidth="@dimen/default_button_width"
            android:text="@string/autenticacao_button_text"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize13_8"/>

        <TextView
            android:id="@+id/autenticacao_textViewCadastrar"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_below="@id/buttonEntrar"
            android:layout_marginTop="22.9dp"
            android:fontFamily="sans-serif"
            android:text="@string/autenticacao_quero_me_cadastrar"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize13_8"/>

        <TextView
            android:id="@+id/autenticacao_textViewEsqueci"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_below="@+id/autenticacao_textViewCadastrar"
            android:layout_marginTop="22.1dp"
            android:fontFamily="sans-serif"
            android:text="@string/autenticacao_esqueceu_sua_senha"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize13_8"/>
    </RelativeLayout>
</RelativeLayout>
